--- a/.gitignore
+++ b/.gitignore
@@ -36,4 +36,4 @@ wp-content/*
 wp-content/plugins/*
 
 # Ignore node (win filename issues)
-wp-content/themes/dev test/node_modules
+wp-content/themes/dev test - Goran Presecki/node_modules
